@@ -8,14 +8,17 @@ import com.rivalhub.event.EventService;
 import com.rivalhub.event.EventType;
 import com.rivalhub.event.billiards.BilliardsEvent;
 import com.rivalhub.event.common.EventCommonService;
+import com.rivalhub.organization.Organization;
 import com.rivalhub.organization.OrganizationRepository;
 import com.rivalhub.common.exception.OrganizationNotFoundException;
 import com.rivalhub.security.SecurityUtils;
 import com.rivalhub.user.UserDetailsDto;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,12 +47,18 @@ public class DartEventService implements EventService {
                 .orElseThrow(OrganizationNotFoundException::new);
         return organization.getDartEvents()
                 .stream()
-                .map(dartEvent -> {
-                    EventDto eventDto = autoMapper.mapToEventDto(dartEvent);
-                    eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
-                    return eventDto;
-                })
-                .collect(Collectors.toList());
+                .map(mapToEventDTO(organization))
+                .toList();
+    }
+
+    private Function<DartEvent, EventDto> mapToEventDTO(Organization organization) {
+        return dartEvent -> {
+            EventDto eventDto = autoMapper.mapToEventDto(dartEvent);
+            eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
+
+            eventCommonService.setStatusForEvent(dartEvent, eventDto);
+            return eventDto;
+        };
     }
 
     @Override
@@ -71,7 +80,21 @@ public class DartEventService implements EventService {
     }
 
     @Override
+    public List<UserDetailsDto> deleteUserFromEvent(Long eventId, Long userId) {
+        return eventCommonService.deleteUserFromEvent(dartEventRepository,eventId,userId);
+    }
+
+    @Override
     public void joinPublicEvent(Long id) {
        eventCommonService.joinPublicEvent(dartEventRepository, id);
+    }
+
+    @Override
+    @Transactional
+    public void deleteEvent(Long organizationId,Long eventId) {
+        Organization organization = organizationRepository.findById(organizationId).orElseThrow(OrganizationNotFoundException::new);
+        organization.getDartEvents().remove(dartEventRepository.findById(eventId)
+                .orElseThrow(EventNotFoundException::new));
+        dartEventRepository.deleteById(eventId);
     }
 }
