@@ -6,13 +6,16 @@ import com.rivalhub.common.exception.EventNotFoundException;
 import com.rivalhub.event.EventService;
 import com.rivalhub.event.EventType;
 import com.rivalhub.event.common.EventCommonService;
+import com.rivalhub.organization.Organization;
 import com.rivalhub.organization.OrganizationRepository;
 import com.rivalhub.common.exception.OrganizationNotFoundException;
 import com.rivalhub.user.UserDetailsDto;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -41,12 +44,18 @@ public class PullUpEventService implements EventService {
                 .orElseThrow(OrganizationNotFoundException::new);
         return organization.getPullUpsEvents()
                 .stream()
-                .map(pullUpEvent -> {
-                    EventDto eventDto = autoMapper.mapToEventDto(pullUpEvent);
-                    eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
-                    return eventDto;
-                })
-                .collect(Collectors.toList());
+                .map(mapToEventDTO(organization))
+                .toList();
+    }
+
+    private Function<PullUpEvent, EventDto> mapToEventDTO(Organization organization) {
+        return pullUpEvent -> {
+            EventDto eventDto = autoMapper.mapToEventDto(pullUpEvent);
+            eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
+
+            eventCommonService.setStatusForEvent(pullUpEvent, eventDto);
+            return eventDto;
+        };
     }
 
     @Override
@@ -68,8 +77,23 @@ public class PullUpEventService implements EventService {
     }
 
     @Override
+    public List<UserDetailsDto> deleteUserFromEvent(Long eventId, Long userId) {
+        return eventCommonService.deleteUserFromEvent(pullUpEventRepository,eventId,userId);
+    }
+
+    @Override
     public void joinPublicEvent(Long id) {
         eventCommonService.joinPublicEvent(pullUpEventRepository, id);
     }
+
+    @Override
+    @Transactional
+    public void deleteEvent(Long organizationId,Long eventId) {
+        Organization organization = organizationRepository.findById(organizationId).orElseThrow(OrganizationNotFoundException::new);
+        organization.getPullUpsEvents().remove(pullUpEventRepository.findById(eventId)
+                .orElseThrow(EventNotFoundException::new));
+        pullUpEventRepository.deleteById(eventId);
+    }
+
 
 }
