@@ -6,13 +6,16 @@ import com.rivalhub.common.exception.EventNotFoundException;
 import com.rivalhub.event.EventService;
 import com.rivalhub.event.EventType;
 import com.rivalhub.event.common.EventCommonService;
+import com.rivalhub.organization.Organization;
 import com.rivalhub.organization.OrganizationRepository;
 import com.rivalhub.common.exception.OrganizationNotFoundException;
 import com.rivalhub.user.UserDetailsDto;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -42,12 +45,18 @@ public class RunningEventService implements EventService {
                 .orElseThrow(OrganizationNotFoundException::new);
         return organization.getRunningEvents()
                 .stream()
-                .map(runningEvent -> {
-                    EventDto eventDto = autoMapper.mapToEventDto(runningEvent);
-                    eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
-                    return eventDto;
-                })
-                .collect(Collectors.toList());
+                .map(mapToEventDTO(organization))
+                .toList();
+    }
+
+    private Function<RunningEvent, EventDto> mapToEventDTO(Organization organization) {
+        return runningEvent -> {
+            EventDto eventDto = autoMapper.mapToEventDto(runningEvent);
+            eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
+
+            eventCommonService.setStatusForEvent(runningEvent, eventDto);
+            return eventDto;
+        };
     }
 
     @Override
@@ -69,7 +78,21 @@ public class RunningEventService implements EventService {
     }
 
     @Override
+    public List<UserDetailsDto> deleteUserFromEvent(Long eventId, Long userId) {
+        return eventCommonService.deleteUserFromEvent(runningEventRepository,eventId,userId);
+    }
+
+    @Override
     public void joinPublicEvent(Long id) {
         eventCommonService.joinPublicEvent(runningEventRepository, id);
+    }
+
+    @Override
+    @Transactional
+    public void deleteEvent(Long organizationId,Long eventId) {
+        Organization organization = organizationRepository.findById(organizationId).orElseThrow(OrganizationNotFoundException::new);
+        organization.getRunningEvents().remove(runningEventRepository.findById(eventId)
+                .orElseThrow(EventNotFoundException::new));
+        runningEventRepository.deleteById(eventId);
     }
 }
